--- a/manifest.json
+++ b/manifest.json
@@ -4,14 +4,22 @@
   "version": "1.0",
   "manifest_version": 2,
   "permissions": [
-          "storage"
+          "storage",
+          "activeTab",
+          "clipboardRead"
         ],
   "browser_action": {
-    "default_title": "Fun Little Item Prettified Parser",
-    "default_popup": "flipopup.html"
-  },
+    "default_title": "Fun Little Item Prettified Parser"  },
   "icons": {
       "32": "logo.jpeg",
       "16": "logo.jpeg"
-  }, 
+  },
+  "content_scripts": [
+    {
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": ["jquery-3.3.1.min.js", "content.js"]
+    }
+  ]
 }
