--- a/manifest.json
+++ b/manifest.json
@@ -9,11 +9,15 @@
           "clipboardRead"
         ],
   "browser_action": {
-    "default_title": "Fun Little Item Prettified Parser"  },
-  "icons": {
-      "32": "logo.jpeg",
-      "16": "logo.jpeg"
+    "default_title": "Fun Little Item Prettified Parser",
+    "default_popup": "mainCard.html"
   },
+  "icons": {
+    "128": "ficon.png",
+      "32": "ficon.png",
+      "24": "ficon.png",
+      "16": "ficon.png"
+  }
   "content_scripts": [
     {
       "matches": [
@@ -21,5 +25,9 @@
       ],
       "js": ["jquery-3.3.1.min.js", "content.js"]
     }
+  ],
+  "web_accessible_resources": [
+    "mainCard.html",
+    "resultCard.html"
   ]
 }
